# SmartTicket-LangGraph

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_modelos.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/limpiador/: node.py
src/agents/support/nodes/llm_gemini/: node.py  prompt.py
src/agents/support/nodes/mascara/: node.py
src/agents/support/nodes/priorizador/: node.py
src/api/: mock_webhook.py
